test/attr/attr_inlinable_old_spelling.code
// RUN: %target-typecheck-verify-language -language-version 5

@_inlineable public fn oldInlinableFunction() {}
// expected-error@-1 {{'@_inlineable' has been renamed to '@inlinable'}}{{2-13=inlinable}}

@_versioned fn oldVersionedFunction() {}
// expected-error@-1 {{'@_versioned' has been renamed to '@usableFromInline'}}{{2-12=usableFromInline}}
